# daily-warm-rs

./: Cargo.toml  README.md  mail.html
src/: api.rs  mail.rs  mail_old.rs  main.rs
