[package]
name = "daily-warm-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.1.0"
lettre = "0.9.6"
scraper = "0.12.0"
serde =  { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["blocking", "json"] }
# tokio = { version = "1", features = ["full"] }
